--- a/Site Web/style/style.css
+++ b/Site Web/style/style.css
@@ -55,6 +55,7 @@ table {
 html {
   width: 100%;
   height: 100%;
+  font-family: 'Montserrat', sans-serif;
   background: -webkit-gradient(linear, left top, right bottom, from(#84FAB0), to(#8FD3F4));
   background: linear-gradient(to bottom right, #84FAB0, #8FD3F4);
 }
@@ -79,9 +80,13 @@ html .div-connexion .connexion {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-top: 20px;
   background: rgba(255, 255, 255, 0.3);
   border-radius: 15px;
@@ -91,7 +96,30 @@ html .div-connexion .connexion {
 
 html .div-connexion .connexion .title-connexion {
   font-size: 2.5rem;
-  margin-top: 10px;
-  border-bottom: 2px black;
+  margin-top: 30px;
+  height: 80px;
+  color: #353B48;
+}
+
+html .div-connexion .connexion .border {
+  width: 150px;
+  border-top: solid 2px  #353B48;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+html .div-connexion .connexion .border input {
+  width: 100%;
+}
+
+html .div-connexion .connexion .email {
+  width: 70%;
 }
 /*# sourceMappingURL=style.css.map */
