--- a/Site Web/style/style.scss
+++ b/Site Web/style/style.scss
@@ -2,7 +2,7 @@
 html{
     width: 100%;
     height: 100%;
-
+    font-family: 'Montserrat', sans-serif;
     background: linear-gradient(to bottom right,#84FAB0, #8FD3F4);
 
     .div-logo{
@@ -16,7 +16,8 @@ html{
         justify-content: center;
         .connexion{
             display: flex;
-            justify-content: center;
+            align-items: center;
+            flex-direction: column;
             margin-top: 20px;
             background:rgba(255,255,255, 0.3);
             border-radius: 15px;
@@ -24,9 +25,24 @@ html{
             height: 400px;
             .title-connexion{
                 font-size: 2.5rem;
-                margin-top: 10px;
-                border-bottom: 2px black;
+                margin-top: 30px;
+                height: 80px;
+                color:  #353B48;
             }
+            .border{
+                width:150px;
+                border-top: solid 2px  #353B48; 
+                display: flex;
+                align-items: center;
+                justify-content: center; 
+                input{
+                    width: 100%;
+                }
+            }
+            .email{
+                width: 70%;
+            }
+            
         }
     }
     
