--- a/Site Web/style/style.css
+++ b/Site Web/style/style.css
@@ -60,14 +60,14 @@ html {
   background: linear-gradient(to bottom right, #84FAB0, #8FD3F4);
 }
 
-html .div-logo {
+html .index-div-logo {
   margin: 20px 0 0 20px;
   background: black;
   width: 150px;
   height: 100px;
 }
 
-html .div-connexion {
+html .index-div-connexion {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -76,7 +76,7 @@ html .div-connexion {
           justify-content: center;
 }
 
-html .div-connexion .connexion {
+html .index-div-connexion .index-connexion {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -94,32 +94,59 @@ html .div-connexion .connexion {
   height: 400px;
 }
 
-html .div-connexion .connexion .title-connexion {
+html .index-div-connexion .index-connexion .index-title-connexion {
   font-size: 2.5rem;
   margin-top: 30px;
   height: 80px;
   color: #353B48;
 }
 
-html .div-connexion .connexion .border {
+html .index-div-connexion .index-connexion .index-border {
   width: 150px;
   border-top: solid 2px  #353B48;
+}
+
+html .index-div-connexion .index-connexion .index-email {
+  margin-top: 25px;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-html .div-connexion .connexion .border input {
+html .index-div-connexion .index-connexion .index-email input {
+  width: 70%;
+}
+
+html .index-div-connexion .index-connexion .index-password {
+  margin-top: 25px;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-html .div-connexion .connexion .email {
+html .index-div-connexion .index-connexion .index-password input {
   width: 70%;
 }
 /*# sourceMappingURL=style.css.map */
