--- a/Site Web/style/style.scss
+++ b/Site Web/style/style.scss
@@ -4,17 +4,16 @@ html{
     height: 100%;
     font-family: 'Montserrat', sans-serif;
     background: linear-gradient(to bottom right,#84FAB0, #8FD3F4);
-
-    .div-logo{
+    .index-div-logo{
         margin: 20px 0 0 20px;
         background: black;
         width: 150px;
         height: 100px;
     }
-    .div-connexion{
+    .index-div-connexion{
         display: flex;
         justify-content: center;
-        .connexion{
+        .index-connexion{
             display: flex;
             align-items: center;
             flex-direction: column;
@@ -23,24 +22,37 @@ html{
             border-radius: 15px;
             width: 600px;
             height: 400px;
-            .title-connexion{
+            .index-title-connexion{
                 font-size: 2.5rem;
                 margin-top: 30px;
                 height: 80px;
                 color:  #353B48;
             }
-            .border{
+            .index-border{
                 width:150px;
                 border-top: solid 2px  #353B48; 
+            }
+            .index-email{
+                margin-top: 25px;
+                width: 100%;
                 display: flex;
-                align-items: center;
+                flex-direction: row;
                 justify-content: center; 
+                align-items: center;
                 input{
-                    width: 100%;
+                    width: 70%;
                 }
             }
-            .email{
-                width: 70%;
+            .index-password{
+                margin-top: 25px;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: center; 
+                align-items: center;
+                input{
+                    width: 70%;
+                }
             }
             
         }
