--- a/Site Web/styles/main.scss
+++ b/Site Web/styles/main.scss
@@ -3,18 +3,19 @@
 html,
 body {
     width: 100%;
-    height: 100%;
     font-family: "Montserrat", sans-serif;
     background: linear-gradient(to bottom right, #84fab0, #8fd3f4);
     background-repeat: no-repeat;
     background-attachment: fixed;
     scroll-behavior: smooth;
 
+    // ---------------------------------------
+    // Login Page Styles
     .index-div-logo {
         margin: 20px 0 0 20px;
         background: black;
         width: 150px;
-        height: 100px;
+        height: 80px;
     }
 
     .index-div-connexion {
@@ -71,6 +72,8 @@ body {
         }
     }
 
+    // ---------------------------------------
+    // List Page Styles
     .list-div-logo {
         margin: 20px 0 0 20px;
         background: black;
@@ -127,9 +130,6 @@ body {
                         font-size: 30px;
                     }
                 }
-
-
-
             }
 
             .list-card-line2 {
@@ -141,7 +141,6 @@ body {
                 p {
                     font-size: 20px;
                 }
-
             }
 
             .list-card-line3 {
@@ -165,8 +164,8 @@ body {
             background-color: white;
             padding: 10px;
             border-radius: 50%;
-            width: 70px;
-            height: 70px;
+            width: 60px;
+            height: 60px;
             box-shadow: 0px 3px 6px rgba(0, 0, 0, .4);
             display: flex;
             justify-content: center;
@@ -175,14 +174,147 @@ body {
             position: fixed;
             bottom: 10px;
             left: 10px;
-            ;
+            transition: all .1s ease-in-out;
+
+            &:hover {
+                box-shadow: 0px 3px 6px rgba(0, 0, 0, .6);
+                transform: scale(1.05);
+
+                .add {
+                    transform: scale(1.05);
+                }
+            }
 
             .add {
-                font-size: 60px;
+                font-size: 4em;
+                transition: all .1s ease-in-out;
             }
         }
     }
 
+    // ---------------------------------------
+    // Adding Page Styles
+    a.back {
+        color: #353B48;
+        position: absolute;
+        text-align: center;
+        text-decoration: none;
+        width: 100px;
+    }
 
+    .add-goback-btn {
+        border: 1px transparent solid;
+        display: flex;
+        height: 30px;
+        margin: 15px 0px 0px 20px;
+        position: absolute;
+        transition: all .1s ease-in-out;
+        width: 100px;
 
+        &:hover {
+            background: rgba(255, 255, 255, 0.3);
+            border-radius: 5px;
+            box-shadow: 0px 3px 6px rgba(0, 0, 0, .15);            
+        }
+
+        p {
+            display: inline-block;
+            font-size: 1.2em;
+            line-height: 30px;
+        }
+        i {
+            font-size: 2em;
+            line-height: 30px;
+        }
+    }
+
+    .add-div-connexion {
+        border-radius: 15px;
+        box-shadow: 0px 3px 6px rgba(0, 0, 0, .15);
+        display: flex;
+        justify-content: center;
+        font-family: "Montserrat", sans-serif;
+        margin: 50px  auto;
+        width: 600px;
+
+        .add-form {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            background: white;
+            border: none;
+            border-radius: 15px;
+            font-size: 1.1em;
+            margin: 0 auto;
+            width: 100%;
+
+            .add-title {
+                color: #353B48;
+                font-size: 1.8em;
+                font-weight: bold;
+                margin: 35px 0px;
+                text-align: center;
+            }
+
+            .add-separation-form {
+                color: #353B48;
+                margin-bottom: 35px;
+                width: 50%;
+            }
+
+            i {
+                background-color: white;
+                border-radius: 0px 0px 5px 5px;
+                color: #353B48;
+                font-size: 1.6em;
+                line-height: 45px;
+                padding: 0px 15px;
+                position: absolute;
+            }
+
+            input[type="email"],
+            input[type="text"],
+            textarea {
+                border: none;
+                border-radius: 5px;
+                box-shadow: 0px 3px 6px rgba(0, 0, 0, .15);
+                font-family: "Montserrat", sans-serif;
+                font-size: 1.05em;
+                height: 45px;
+                margin-bottom: 20px;
+                padding: 0px 10px;
+                resize: none;
+                text-indent: 45px;
+                width: 450px;
+
+                &::placeholder {
+                    color: rgba(112, 112, 122, .5);
+                    font-family: "Montserrat", sans-serif;
+                    font-size: 1.1em;
+                    letter-spacing: 2px;
+                }
+            }
+
+            textarea {
+                height: 110px;
+                padding-top: 8px;
+                line-height: 1.5;
+            }
+
+            button[type="submit"] {
+                background-color: #84fab0;
+                border: none;
+                border-radius: 5px;
+                color: #353B48;
+                cursor: pointer;
+                font-family: "Montserrat", sans-serif;
+                font-size: 1em;
+                font-weight: bold;
+                height: 40px;
+                letter-spacing: 2px;
+                margin-bottom: 25px;
+                width: 180px;
+            }
+        }
+    }
 }
