--- a/Site Web/styles/main.scss
+++ b/Site Web/styles/main.scss
@@ -78,7 +78,7 @@ body {
         margin: 20px 0 0 20px;
         background: black;
         width: 150px;
-        height: 100px;
+        height: 80px;
     }
 
     .list-title-container {
@@ -120,11 +120,16 @@ body {
                 }
 
                 .list-name {
-                    font-weight: bold;
+                    font-weight: bolder;
                 }
 
                 a {
                     color: #353B48;
+                    transition: all .1s ease-in-out;
+
+                    &:hover {
+                        transform: scale(1.1);
+                    }
 
                     .pen {
                         font-size: 30px;
@@ -152,6 +157,12 @@ body {
                 .bin {
                     color: #E74C3C;
                     font-size: 30px;
+                    transition: all .1s ease-in-out;
+
+                    &:hover {
+                        transform: scale(1.1);
+                    }
+
                 }
             }
         }
