--- a/APP/app/src/main/res/layout/activity_main.xml
+++ b/APP/app/src/main/res/layout/activity_main.xml
@@ -2,15 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerviewid"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
-    </android.support.v7.widget.RecyclerView>
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_gradient">
 
 </LinearLayout>
