--- a/Site Web/styles/main.scss
+++ b/Site Web/styles/main.scss
@@ -283,6 +283,10 @@ body {
                 position: absolute;
             }
 
+            i.comment {
+                margin-top: 1px;
+            }
+
             input[type="email"],
             input[type="text"],
             textarea {
