--- a/APP/app/src/main/res/drawable/form_bg.xml
+++ b/APP/app/src/main/res/drawable/form_bg.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+    android:shape="rectangle"
+    android:shadowRadius="2"
+    android:shadowColor="#0000ff"
+    android:shadowDx="2"
+    android:shadowDy="4">
 
     <corners android:radius="7dp" />
     <solid android:color="#FFFFFF" />
